--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "client": "file:",
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
