--- a/server/package.json
+++ b/server/package.json
@@ -11,17 +11,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.0.1",
     "form-data": "^4.0.2",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.0",
     "nodemon": "^3.1.9",
     "razorpay": "^2.9.6",
-    "server": "file:"
+    "server": "file:",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
